# RAG-evaluation-and-governance-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
configs/: corpus.yaml  evaluation_rubrics.yaml  project.yaml  risk_taxonomy.yaml
dashboard/: build_dashboard.py
data/: README.md
docs/: architecture.md  baseline-comparison.md  chunking-and-retrieval-design.md  citation-design.md  cloud-aligned-design.md  container-view.md  corpus-design.md  data-flow.md  evaluation-leakage-controls.md  evaluation-limitations.md  figure_catalog.md  figure_generation_notes.md  governance-architecture.md  llm-as-judge-design.md  metric-definitions.md  rag-threat-model.md  reproducibility.md  research-audit-trail.md  research-basis.md  research-methods-log.md  retrieval-improvement-design.md  rubric-design.md  security-architecture.md  security-controls-matrix.md  security-test-plan.md  source-conflict-and-versioning.md  stage-1-evaluation-design.md  stage-1-validation-report.md  stage-2-rag-architecture.md  stage-3-evaluation-engine.md  system-context.md  threats-to-validity.md  traceability-matrix.md  visual_style_guide.md
governance/: ai_risk_register.md  data_card.md  evaluation_card.md  evaluation_governance_plan.md  human_review_protocol.md  incident_response_playbook.md  model_card.md  responsible_ai_checklist.md  risk_register.md  security_and_privacy_notes.md  security_controls_matrix.md  system_card.md
portfolio/: demo_script.md  (+3 more)
(+179 files in other folders)
