[project]
name = "rag-eval-gov"
version = "0.4.0"
description = "Local-first evaluation, retrieval and governance foundations for retrieval-augmented generation systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dr Joseph N. Njiru" }]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval_gov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
